updated readme, fixed chart margins and overall spacing, fixed toolTips

--- a/Skeleton/index.html
+++ b/Skeleton/index.html
@@ -18,10 +18,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12  col-md-9 col-md-offset-0">
+			<div class="col-xs-12  col-md-10 col-md-offset-0">
 				<div class="iframeContainer">
 					<!-- Students: Add a responsive iframe here that includes the d3.html file -->
-					<iframe src="d3.html" height="475" width="650" allowfullscreen="" frameborder="0">
+					<iframe src="d3.html" height="600" width="700" allowfullscreen="" frameborder="0">
 						Your browser does not support iframes
 					  </iframe>
 				</div>
@@ -30,12 +30,22 @@
 		<div class="row">
 			<div class="col-xs-12  col-md-9 col-md-offset-0">
 				<div class="article">
+					<br>
 					<p>There is a slightly positive correlation between the percentage of population between 25 and 29
 						and percentage of the population that says it is in excellent health.
 					</p>
 					<p>
 						This is likely due to the fact that this group is generally in or near their physical prime, and are 
 						just starting to begin their decline.
+					</p>
+					<p>
+						There is no real correlation between the total population in good health and the population between
+						the ages of 25 and 29. There is a slight negative correlation between population of this age group and
+						the percentage of the population in poor health.
+					</p>
+					<p>
+						There does appear to be a slight correlation between the percentage of the population that is male between 25 and 29 and
+						the percentage of the population in good health.
 					</p>
 				</div>
 			</div>
